1998-05-14  Tanaka Akira  <akr@jaist.ac.jp>

	* eword-decode.el (eword-analyze-comment): Call `std11-unfold-string'.

1998-05-13  Tanaka Akira  <akr@jaist.ac.jp>

	* mime-def.el: Fix typo.

1998-05-13  Tanaka Akira  <akr@jaist.ac.jp>

	* Sync up with flim-1_2_0 to flim-1_2_1.

1998-05-08  Tanaka Akira  <akr@jaist.ac.jp>

	* Sync up with flim-1_1_0 to flim-1_2_0.

1998-05-06  Tanaka Akira  <akr@jaist.ac.jp>

	* Sync up with flim-1_0_1 to flim-1_1_0.

1998-04-25  Tanaka Akira  <akr@jaist.ac.jp>

	* eword-decode.el (eword-decode-string): Fix arguments order to calling
	`eword-decode-unstructured'.
	(eword-decode-region): Fix arguments order to calling
	`eword-decode-unstructured'.

1998-04-25  Tanaka Akira  <akr@jaist.ac.jp>

	* eword-decode.el (eword-decode-first-encoded-words): Update DOC-string.
	(eword-decode-first-encoded-words): Update DOC-string.
	(eword-decode-unstructured): Argument `code-conversion' is now required.
	(eword-decode-comment): Argument `code-conversion' is now required.
	(eword-decode-quoted-string): Argument `code-conversion' is now
	required.
	(eword-decode-string): Update DOC-string. Reorder arguments to calling
	`eword-decode-unstructured'.
	(eword-decode-region): Update DOC-string. Reorder arguments to calling
	`eword-decode-unstructured'.
	(eword-analyze-quoted-string): Add `default-mime-charset' argument to
	calling eword-decode-quoted-string.
	(eword-analyze-comment): Add `default-mime-charset' argument to
	calling eword-decode-comment.

1998-04-25  Tanaka Akira  <akr@jaist.ac.jp>

	* eword-decode.el (eword-decode-entire-string): Delete argument
	`default-charset'. Add argument `code-conversion'.
	(eword-decode-unstructured): Add argument `code-conversion'.
	(eword-decode-comment): Add argument `code-conversion'.
	(eword-decode-quoted-string): Add argument `code-conversion'.
	(eword-decode-string): Propagate `code-conversion' to
	`eword-decode-unstructured'.
	(eword-decode-region): Propagate `code-conversion' to